docs/requirements/v1.1.0-dev/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a project scientist I want to know the number of requests for products over a specified period of time ([#23](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/23)) 


This requirement is not impacted by the current version
## As a Node Manager, I want to know the frequency of access of each archive artifact ([#22](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/22)) 


This requirement is not impacted by the current version
## As a data engineer, I want to sync logs from PDS website in an automated fashion ([#2](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/2)) 


This requirement is not impacted by the current version
## As a data scientist, I want to update and refine web metrics dashboards, to provide improved views on PDS node usage patterns over time ([#4](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/4)) 


This requirement is not impacted by the current version
## Dashboard: EN Search Query analytics - queries over time period ([#9](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/9)) 


This requirement is not impacted by the current version
## As a manager, I want access metrics on a specific subset of USA domains ([#17](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/17)) 


This requirement is not impacted by the current version
## As a manager, I want access metrics on a specific subset of International domains ([#18](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/18)) 


This requirement is not impacted by the current version
## Implement crawler to refresh Athena table partitions. ([#19](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/19)) 


This requirement is not impacted by the current version
## As a user, I want year over year metrics for total egress ([#21](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/21)) 


This requirement is not impacted by the current version
## As a user, I want a mission-specific dashboard showing instrument and product type download metrics ([#24](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/24)) 


This requirement is not impacted by the current version
## update repo with template files ([#39](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/39)) 


This requirement is not impacted by the current version
## As a user, I want to automatically deploy all web analytics components ([#53](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/53)) 


This requirement is not impacted by the current version
## As a CloudOps Engineer, I want to ingest and parse CloudFront access logs in legacy W3C tab-delimited format ([#71](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/71)) 


This requirement is not impacted by the current version
## As a CloudOps Engineer, I want to ingest and parse CloudFront access logs in JSON format ([#75](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/75)) 


This requirement is not impacted by the current version
## Deploy web analytics infrastructure to Test environment ([#78](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/78)) 


This requirement is not impacted by the current version
## Deploy web analytics infrastructure to Prod environment ([#79](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/79)) 


This requirement is not impacted by the current version
## As an EN/node operator, I want clear documentation of the DUM onboarding process ([#80](https://github.com/NASA-PDS/o11y-cloudfront-batch/issues/80)) 


This requirement is not impacted by the current version